# omilog

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
caddy/: Caddyfile
deploy/: omilog.service
docs/: FINE-TUNE.md  NEXT-STEPS.md  TODO.md  diarization-setup.md  whisper-server.md
eval/: README.md
scripts/: _bootstrap_env.py  backfill_quality.py  debug_vad.py  download_diarization_models.py  download_silero_vad.py  eval_bootstrap.py  eval_run.py  hash_password.py  migrate_extraction_repaired.py  migrate_phase3b.py  replay_session.py  setup.sh  start.sh  start_tmux.sh
src/omilog/: auth.py  config.py  db.py  ics.py  main.py  models.py
src/omilog/api/: action_items.py  audio_upload.py  audio_ws.py  auth.py  conversations.py  events.py  health.py  ics_feed.py  people.py  stubs.py
src/omilog/audio/: ogg_opus.py
src/omilog/evals/: __init__.py  bootstrap.py  cases.py  metrics.py  runner.py
src/omilog/pipeline/: audio.py  daily.py  diarize.py  extract.py  llm.py  runner.py  silero.py  stt.py  vad.py  wake.py
src/omilog/web/: auth.py  eval_ui.py  routes.py
src/omilog/web/static/: style.css
src/omilog/web/templates/: _action_row.html  _eval_run_result.html  _tune_diarize_results.html  _tune_results.html  _wake_invocation.html  actions.html  base.html  config.html  config_prompt.html  conversation.html  daily.html  eval_case.html  eval_index.html  events.html  index.html  login.html  speakers.html  status.html  tune_index.html  tune_session.html  wake_actions_edit.html  wake_actions_index.html  wake_actions_log.html
tests/: conftest.py  test_audio_retention.py  test_audio_sync_transcript.py  test_config.py  test_daily.py  test_decisions_and_toggles.py  test_diarize.py  test_eval_ui.py  test_evals.py  test_ics.py  test_migrations.py  test_ogg_opus.py  test_phase0.py  test_phase2.py  test_pipeline.py  test_pipeline_thread.py  test_prompt_editor.py  test_quality.py  test_silero_vad.py  test_speakers.py  test_status_and_delete.py  test_tune.py  test_tune_diarize.py  test_vad.py  test_wake.py  test_web.py  test_ws_rollover.py
