[project]
name = "omilog"
version = "0.1.0"
description = "Self-hosted personal conversation capture (Omi necklace → Pi → GPU cluster)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
# Phase 4 — speaker diarization. Heavy (~2 GB), opt-in only:
#   uv sync --extra diarization     # or  pip install -e ".[diarization]"
# Requires accepting two model licenses on HuggingFace + an HF token in .env.
# See docs/diarization-setup.md for the full one-time setup.
diarization = [
    "pyannote.audio>=3.1",
    "torch>=2.0",
    "torchaudio>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omilog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
