[project]
name = "omilog"
version = "0.1.0"
description = "Self-hosted personal conversation capture (Omi necklace → Pi → GPU cluster)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "jinja2>=3.1",
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
# Phase 4 — speaker diarization. ONNX-based; ~80 MB install (no torch).
# Models are downloaded from sherpa-onnx GitHub releases (no HuggingFace
# account, no license click-through, audio never leaves the tailnet).
#   uv sync --extra diarization
#   .venv/bin/python scripts/download_diarization_models.py
# See docs/diarization-setup.md for the full one-time setup.
diarization = [
    "sherpa-onnx>=1.11",
    "soundfile>=0.12",
    "numpy>=1.24",
    # Note: we deliberately do NOT depend on `onnxruntime`. sherpa-onnx's
    # wheels bundle an ABI-matched copy of libonnxruntime.so under
    # sherpa_onnx/lib/; installing a separate onnxruntime can cause symbol-
    # version mismatches (`VERS_1.X` not found). start.sh adds sherpa-onnx's
    # bundled lib dir to LD_LIBRARY_PATH so dlopen by bare name resolves
    # against the right ABI.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omilog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
